test/resolver/fail/resolve_circular_import.ms
import { a_val } from "module_circular_a";
const x := a_val;
